--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stackblur-canvas/1.4.0/stackblur.min.js"></script>
+
 <script type="text/discourse-plugin" version="0.8.16">
 $(document).ready(function() {
 	var blur = $("#background_b").data("blur");
